--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -4,43 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/p"
-    tools:context=".MainActivity"
-    tools:ignore="MissingClass">
+    android:background="@drawable/background_image">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginBottom="30dp"
+        android:contentDescription="App Logo"
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/appDescription"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/appDescription"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Welcome to Nautireg - Your smart solution for boat registration and management!"
+        android:textSize="20sp"
+        android:textColor="@android:color/white"
         android:gravity="center"
-        android:padding="30dp">
+        android:padding="16dp"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@id/imageView2"
+        app:layout_constraintBottom_toTopOf="@+id/getstarted"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- Logo -->
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="40dp"
-            app:srcCompat="@drawable/logi2" />
-
-        <!-- Login Button -->
-        <Button
-            android:id="@+id/getstarted"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#F28C1F"
-            android:text="Get Started"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:padding="12dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:shape="rectangle"
-            android:cornerRadius="30dp" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/getstarted"
+        android:layout_width="192dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#F28C1F"
+        android:elevation="4dp"
+        android:padding="12dp"
+        android:text="Get Started"
+        android:textColor="@android:color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
