--- a/app/src/main/res/layout/activity_boatdetails.xml
+++ b/app/src/main/res/layout/activity_boatdetails.xml
@@ -1,105 +1,83 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_image"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@drawable/background">
+    tools:context=".RegisterActivity">
 
 
-    <TextView
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Display Panel"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:padding="16dp"
-        android:textColor="@android:color/white"
-        android:elevation="4dp"/>
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="12dp"
-        android:layout_marginTop="12dp"
-        android:elevation="4dp"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginEnd="8dp"/>
-
-        <EditText
-            android:id="@+id/searchboat"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Search Boat"
-            android:textSize="16sp"
-            android:background="@color/black"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white"
-            android:padding="8dp"/>
-    </LinearLayout>
+            android:layout_height="?attr/actionBarSize"
+            android:background="#F28C1F"
+            android:elevation="4dp"
+            app:title="Boat Details"
+            app:titleTextColor="@android:color/black"
+            app:navigationIcon="@drawable/arrow_back"
+            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/boatdetails"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="8dp"
-        android:backgroundTint="#FFFFFF"
-        android:padding="20dp">
+        android:layout_height="match_parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        tools:ignore="NotSibling">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="20dp">
 
-            <TextView
-                android:id="@+id/boatname"
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Boat Name - ABC "
-                android:textSize="18sp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:paddingBottom="4dp"/>
+                android:layout_marginBottom="15dp"
+                app:cardCornerRadius="20dp"
+                app:cardBackgroundColor="@android:color/transparent">
 
-            <TextView
-                android:id="@+id/ownername"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Owner Name - Kasun"
-                android:textSize="16sp"
-                android:textColor="@android:color/darker_gray"
-                android:paddingBottom="4dp"/>
+                <Button
+                    android:id="@+id/adddeparture"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:backgroundTint="#B3800F"
+                    android:text="Add Departures"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/boatsize"
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Type - Small"
-                android:textSize="16sp"
-                android:textColor="@android:color/darker_gray"
-                android:paddingBottom="4dp"/>
+                android:layout_marginBottom="15dp"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="10dp"
+                app:cardBackgroundColor="@android:color/transparent">
 
-            <TextView
-                android:id="@+id/message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Registration Success"
-                android:textSize="16sp"
-                android:textColor="@android:color/holo_green_dark"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"/>
+                <Button
+                    android:id="@+id/viewdepartures"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:backgroundTint="#B3800F"
+                    android:text="View Departures"
+                    android:textColor="@android:color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
+    </ScrollView>
 </LinearLayout>
+
