--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,15 @@
         <color name="dark_red">#B71C1C</color>
         <color name="gray">#757575</color>
 
+    <color name="primary">#0d6efd</color>
+    <color name="danger">#dc3545</color>
+    <color name="warning">#ffc107</color>
+    <color name="success">#198754</color>
+    <color name="info">#0dcaf0</color>
+    <color name="secondary">#6c757d</color>
+    <color name="light">#f8f9fa</color>
+    <color name="dark">#212529</color>
+
+
 
 </resources>
