--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -153,7 +153,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:backgroundTint="#136976"
-                    android:text="Show Details"
+                    android:text="Boat Details"
                     android:textColor="@android:color/white"
                     android:textSize="24sp"
                     android:textStyle="bold" />
