--- a/app/src/main/res/layout/activity_boatregistration.xml
+++ b/app/src/main/res/layout/activity_boatregistration.xml
@@ -293,7 +293,7 @@
                     android:id="@+id/power"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Engine Power"
+                    android:hint="Engine Power (HP)"
                     android:inputType="phone"
                     android:padding="12dp"
                     android:textColor="@android:color/black"
@@ -319,7 +319,7 @@
                     android:id="@+id/capacity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Capacity"
+                    android:hint="Capacity (People)"
                     android:inputType="phone"
                     android:padding="12dp"
                     android:textColor="@android:color/black"
